--- a/PayRollForm.html
+++ b/PayRollForm.html
@@ -2,15 +2,15 @@
 <html>
 <head>
     <title>Employee Payroll Form</title>
-    <link rel="stylesheet" href = "PayRoll_form.css">
-    <script src="PayRoll_form.js"></script>
+    <link rel="stylesheet" href = "PayRollForm.css">
+    <script src="PayRollForm.js"></script>
     <script src="EmployeePayRoll.js"></script>
 </head>
 
 <body> 
     <header class = "header-content header">
         <div class = "logo-content">
-            <img src = "profile1.png" alt ="" width="11%">
+            <img src = "emp.jpg" alt ="" width="11%">
             <div>
                 <span class = "emp-text">EMPLOYEE</span><br>
                 <span class = "emp-text emp-payroll">PAYROLL</span>
@@ -33,26 +33,26 @@
             <div class = "profile-radio-content">
                 <label>
                     <input type = "radio" id = "profile1" name = "profile"
-                    value="profile1.jpg" required>
-                    <img class = "profile" id = "image1" src="profile6.png">
+                    value="emp.jpg" required>
+                    <img class = "profile" id = "image1" src="emp.jpg">
                 </label>
 
                 <label>
                 <input type = "radio" id = "profile2" name = "profile"
-                value="profile2.png" required>
-                <img class = "profile" id = "image2" src="profile3.png">
+                value="emp1.jpg" required>
+                <img class = "profile" id = "image2" src="emp1.jpg">
             </label>
 
             <label>
             <input type = "radio" id = "profile3" name = "profile"
-            value="profile3.png" required>
-            <img class = "profile" id = "image3" src="profile4.png">
+            value="emp2.jpg" required>
+            <img class = "profile" id = "image3" src="emp2.jpg">
         </label>
 
         <label>
         <input type = "radio" id = "profile4" name = "profile"
-        value="profile4.png" required>
-        <img class = "profile" id = "image4" src="profile5.png">
+        value="emp3.jpg" required>
+        <img class = "profile" id = "image4" src="emp3.jpg">
     </label>
             </div>
         </div>
